[project]
name = "hybrid"
version = "0.1.0"
readme = "RL.md"
requires-python = ">=3.10"
dependencies = [
    "markupsafe==2.1.3",
    "torch~=2.2.1",
    "mlagents"
]

[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.workspace]
members = ["testing"]
